@@ -1,13 +1,14 @@
 package com.idega.block.finance.presentation;
+
 import java.rmi.RemoteException;
 import java.sql.SQLException;
 import java.util.Collection;
 import java.util.Iterator;
+
 import javax.ejb.FinderException;
 import javax.faces.component.UIComponent;
+
 import com.idega.block.finance.data.PaymentType;
-import com.idega.idegaweb.IWBundle;
-import com.idega.idegaweb.IWResourceBundle;
 import com.idega.presentation.IWContext;
 import com.idega.presentation.PresentationObject;
 import com.idega.presentation.Table;
@@ -20,6 +21,7 @@ import com.idega.presentation.ui.HiddenInput;
 import com.idega.presentation.ui.SubmitButton;
 import com.idega.presentation.ui.TextInput;
 import com.idega.presentation.util.Edit;
+
 /**
  * 
  * Title: idegaclasses
@@ -33,21 +35,24 @@ import com.idega.presentation.util.Edit;
  * @author <a href="mailto:aron@idega.is">aron@idega.is
  * 
  * @version 1.0
- *  
+ * 
  */
 public class PaymentTypeEditor extends Finance {
+
 	public String strAction = "tke_action";
-	protected final int ACT1 = 1, ACT2 = 2, ACT3 = 3, ACT4 = 4, ACT5 = 5;
-	protected boolean isAdmin = false;
+	// protected boolean isAdmin = false;
 	private final static String IW_BUNDLE_IDENTIFIER = "com.idega.block.finance";
-	protected IWResourceBundle iwrb;
-	protected IWBundle iwb;
+
+	// protected IWResourceBundle iwrb;
+	// protected IWBundle iwb;
 	public String getLocalizedNameKey() {
 		return "paymenttype";
 	}
+
 	public String getLocalizedNameValue() {
 		return "Paymenttype";
 	}
+
 	protected void control(IWContext iwc) {
 		if (this.isAdmin) {
 			try {
@@ -59,16 +64,16 @@ public class PaymentTypeEditor extends Finance {
 					String sAct = iwc.getParameter(this.strAction);
 					int iAct = Integer.parseInt(sAct);
 					switch (iAct) {
-						case ACT1 :
+						case ACT1:
 							MO = getMain(iwc, this.iCategoryId);
 							break;
-						case ACT2 :
+						case ACT2:
 							MO = getChange(iwc, this.iCategoryId);
 							break;
-						case ACT3 :
+						case ACT3:
 							MO = doUpdate(iwc, this.iCategoryId);
 							break;
-						default :
+						default:
 							MO = getMain(iwc, this.iCategoryId);
 							break;
 					}
@@ -79,7 +84,8 @@ public class PaymentTypeEditor extends Finance {
 				T.add(MO);
 				T.setWidth("100%");
 				add(T);
-			} catch (Exception S) {
+			}
+			catch (Exception S) {
 				S.printStackTrace();
 			}
 		}
@@ -87,6 +93,7 @@ public class PaymentTypeEditor extends Finance {
 			add(this.iwrb.getLocalizedString("access_denied", "Access denies"));
 		}
 	}
+
 	protected PresentationObject makeLinkTable(int menuNr, int iCategoryId) {
 		Table LinkTable = new Table(3, 1);
 		int last = 3;
@@ -97,11 +104,11 @@ public class PaymentTypeEditor extends Finance {
 		LinkTable.setWidth(last, "100%");
 		Link Link1 = new Link(this.iwrb.getLocalizedString("view", "View"));
 		Link1.setFontColor(Edit.colorLight);
-		Link1.addParameter(this.strAction, String.valueOf(this.ACT1));
+		Link1.addParameter(this.strAction, String.valueOf(ACT1));
 		Link1.addParameter(Finance.getCategoryParameter(iCategoryId));
 		Link Link2 = new Link(this.iwrb.getLocalizedString("change", "Change"));
 		Link2.setFontColor(Edit.colorLight);
-		Link2.addParameter(this.strAction, String.valueOf(this.ACT2));
+		Link2.addParameter(this.strAction, String.valueOf(ACT2));
 		Link2.addParameter(Finance.getCategoryParameter(iCategoryId));
 		if (this.isAdmin) {
 			LinkTable.add(Link1, 1, 1);
@@ -109,96 +116,98 @@ public class PaymentTypeEditor extends Finance {
 		}
 		return LinkTable;
 	}
-protected PresentationObject getMain(IWContext iwc,int iCategoryId){
 
-    Table keyTable = new Table();
-    Collection types = null;
-    //List types =
-	// FinanceFinder.getInstance().listOfPaymentTypes(iCategoryId);
-	try {
-		types = getFinanceService().getPaymentTypeHome().findAll();
-	} 
-	catch (RemoteException e) {
-		e.printStackTrace();
-	} 
-	catch (FinderException e) {
-		e.printStackTrace();
+	protected PresentationObject getMain(IWContext iwc, int iCategoryId) {
+
+		Table keyTable = new Table();
+		Collection types = null;
+		// List types =
+		// FinanceFinder.getInstance().listOfPaymentTypes(iCategoryId);
+		try {
+			types = getFinanceService().getPaymentTypeHome().findAll();
+		}
+		catch (RemoteException e) {
+			e.printStackTrace();
+		}
+		catch (FinderException e) {
+			e.printStackTrace();
+		}
+		int count = 0;
+
+		if (types != null) {
+			count = types.size();
+		}
+
+		keyTable = new Table(6, count + 1);
+
+		keyTable.setWidth("100%");
+
+		keyTable.setHorizontalZebraColored(Edit.colorLight, Edit.colorWhite);
+
+		keyTable.setRowColor(1, Edit.colorMiddle);
+
+		keyTable.setCellpadding(2);
+
+		keyTable.setCellspacing(1);
+
+		// keyTable.setColumnAlignment(3, "right");
+
+		keyTable.add(Edit.formatText("Nr"), 1, 1);
+
+		keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("name", "Name")), 2, 1);
+
+		keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("info", "Info")), 3, 1);
+
+		keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("payments", "Payments")), 4, 1);
+
+		keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("amount_cost", "Amount cost")), 5, 1);
+
+		keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("percent_cost", "Percent cost")), 6, 1);
+
+		if (this.isAdmin) {
+
+			if (count > 0) {
+
+				PaymentType type;
+				int row = 2;
+				int rowcount = 1;
+				for (Iterator iter = types.iterator(); iter.hasNext();) {
+					type = (PaymentType) iter.next();
+
+					keyTable.add(Edit.formatText(String.valueOf(rowcount++)), 1, row);
+
+					keyTable.add(Edit.formatText(type.getName()), 2, row);
+
+					keyTable.add(Edit.formatText(type.getInfo()), 3, row);
+
+					keyTable.add(Edit.formatText(type.getPayments()), 4, row);
+
+					keyTable.add(Edit.formatText(Float.toString(type.getAmountCost())), 5, row);
+
+					keyTable.add(Edit.formatText(Float.toString(type.getPercentCost())), 6, row);
+					row++;
+				}
+
+			}
+
+		}
+
+		return (keyTable);
+
 	}
-	int count = 0;
 
-    if(types !=null) {
-		count = types.size();
-	}
-
-    keyTable = new Table(6,count+1);
-
-    keyTable.setWidth("100%");
-
-    keyTable.setHorizontalZebraColored(Edit.colorLight,Edit.colorWhite);
-
-    keyTable.setRowColor(1,Edit.colorMiddle);
-
-    keyTable.setCellpadding(2);
-
-    keyTable.setCellspacing(1) ;
-
-    //keyTable.setColumnAlignment(3, "right");
-
-    keyTable.add(Edit.formatText("Nr"),1,1);
-
-    keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("name","Name")),2,1);
-
-    keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("info","Info")),3,1);
-
-    keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("payments","Payments")),4,1);
-
-    keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("amount_cost","Amount cost")),5,1);
-
-    keyTable.add(Edit.formatText(this.iwrb.getLocalizedString("percent_cost","Percent cost")),6,1);
-
-    if(this.isAdmin){
-
-      if(count > 0){
-
-        PaymentType type;
-        int row  = 2;
-        int rowcount = 1;
-        for (Iterator iter = types.iterator(); iter.hasNext();) {
-        	type = (PaymentType)  iter.next();
-		
-
-          keyTable.add(Edit.formatText( String.valueOf(rowcount++)),1,row);
-
-          keyTable.add(Edit.formatText(type.getName()),2,row);
-
-          keyTable.add(Edit.formatText(type.getInfo()),3,row);
-
-          keyTable.add(Edit.formatText(type.getPayments()),4,row);
-
-          keyTable.add(Edit.formatText(Float.toString(type.getAmountCost())),5,row);
-
-          keyTable.add(Edit.formatText(Float.toString(type.getPercentCost())),6,row);
-          row++;
-        }
-
-      }
-
-    }
-
-    return (keyTable);
-
-  }	protected UIComponent getChange(IWContext iwc, int iCategoryId) throws SQLException {
+	protected UIComponent getChange(IWContext iwc, int iCategoryId) throws SQLException {
 		Form myForm = new Form();
 		myForm.add(Finance.getCategoryParameter(iCategoryId));
-		//myForm.maintainAllParameters();
-		//List keys = FinanceFinder.getInstance().listOfPaymentTypes(iCategoryId);
+		// myForm.maintainAllParameters();
+		// List keys = FinanceFinder.getInstance().listOfPaymentTypes(iCategoryId);
 		Collection types = null;
 		try {
 			types = getFinanceService().getPaymentTypeHome().findAll();
 		}
 		catch (RemoteException e) {
 			e.printStackTrace();
-		} 
+		}
 		catch (FinderException e) {
 			e.printStackTrace();
 		}
@@ -229,7 +238,7 @@ protected PresentationObject getMain(IWContext iwc,int iCategoryId){
 		Iterator iter = types.iterator();
 		for (int i = 1; i <= inputcount; i++) {
 			String rownum = String.valueOf(i);
-			//int pos;
+			// int pos;
 			nameInput = new TextInput("tke_nameinput" + i);
 			infoInput = new TextInput("tke_infoinput" + i);
 			payments = getIntDrop("tke_paym" + i, 1, 12, "");
@@ -237,7 +246,7 @@ protected PresentationObject getMain(IWContext iwc,int iCategoryId){
 			percent = getIntDrop("tke_percent" + i, 0, 100, "");
 			int id = -1;
 			if (i <= count && iter.hasNext()) {
-				//pos = i - 1;
+				// pos = i - 1;
 				key = (PaymentType) iter.next();
 				nameInput.setContent(key.getName());
 				infoInput.setContent(key.getInfo());
@@ -263,44 +272,28 @@ protected PresentationObject getMain(IWContext iwc,int iCategoryId){
 			inputTable.add(idInput);
 		}
 		myForm.add(new HiddenInput("tke_count", String.valueOf(inputcount)));
-		myForm.add(new HiddenInput(this.strAction, String.valueOf(this.ACT3)));
+		myForm.add(new HiddenInput(this.strAction, String.valueOf(ACT3)));
 		myForm.add(inputTable);
 		SubmitButton save = new SubmitButton(this.iwrb.getLocalizedString("save", "Save"));
 		Edit.setStyle(save);
 		myForm.add(save);
 		return (myForm);
 	}
+
 	protected PresentationObject doUpdate(IWContext iwc, int iCategoryId) {
-		/*int count = Integer.parseInt(iwc.getParameter("tke_count"));
-		String sName, sDel, sCost, sPercent, sPayments;
-		String sInfo;
-		Float cost = null, percent = null;
-		Integer payments = null;
-		int ID;
-		for (int i = 1; i < count + 1; i++) {
-			sName = iwc.getParameter("tke_nameinput" + i);
-			sInfo = iwc.getParameter("tke_infoinput" + i);
-			sDel = iwc.getParameter("tke_delcheck" + i);
-			sPayments = iwc.getParameter("tke_paym" + i);
-			sCost = iwc.getParameter("tke_cost" + i);
-			sPercent = iwc.getParameter("tke_percent" + i);
-			ID = Integer.parseInt(iwc.getParameter("tke_idinput" + i));
-			if (sDel != null && sDel.equalsIgnoreCase("true")) {
-				//FinanceBusiness.deleteTariffKey(ID);
-			} else if (!"".equals(sName)) {
-				if (!"".equals(sPayments))
-					payments = Integer.valueOf(sPayments);
-				if (!"".equals(sCost))
-					cost = Float.valueOf(sCost);
-				if (!"".equals(sPercent)) {
-					int p = Integer.parseInt(sPercent);
-					percent = new Float((float) p / 100);
-				}
-				//FinanceBusiness.savePaymentType(ID, sName, sInfo, iCategoryId, payments, cost, percent);
-			}
-		}// for loop*/
+		/*
+		 * int count = Integer.parseInt(iwc.getParameter("tke_count")); String sName, sDel, sCost, sPercent, sPayments; String sInfo; Float cost = null,
+		 * percent = null; Integer payments = null; int ID; for (int i = 1; i < count + 1; i++) { sName = iwc.getParameter("tke_nameinput" + i); sInfo =
+		 * iwc.getParameter("tke_infoinput" + i); sDel = iwc.getParameter("tke_delcheck" + i); sPayments = iwc.getParameter("tke_paym" + i); sCost =
+		 * iwc.getParameter("tke_cost" + i); sPercent = iwc.getParameter("tke_percent" + i); ID = Integer.parseInt(iwc.getParameter("tke_idinput" + i));
+		 * if (sDel != null && sDel.equalsIgnoreCase("true")) { //FinanceBusiness.deleteTariffKey(ID); } else if (!"".equals(sName)) { if
+		 * (!"".equals(sPayments)) payments = Integer.valueOf(sPayments); if (!"".equals(sCost)) cost = Float.valueOf(sCost); if (!"".equals(sPercent)) {
+		 * int p = Integer.parseInt(sPercent); percent = new Float((float) p / 100); } //FinanceBusiness.savePaymentType(ID, sName, sInfo, iCategoryId,
+		 * payments, cost, percent); } }// for loop
+		 */
 		return getMain(iwc, iCategoryId);
 	}
+
 	private DropdownMenu getIntDrop(String name, int from, int to, String selected) {
 		DropdownMenu drp = new DropdownMenu(name);
 		for (int i = from; i <= to; i++) {
@@ -309,9 +302,11 @@ protected PresentationObject getMain(IWContext iwc,int iCategoryId){
 		drp.setSelectedElement(selected);
 		return drp;
 	}
+
 	public String getBundleIdentifier() {
 		return IW_BUNDLE_IDENTIFIER;
 	}
+
 	public void main(IWContext iwc) {
 		this.iwrb = getResourceBundle(iwc);
 		this.iwb = getBundle(iwc);
